--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -91,7 +91,7 @@
     "* SKBL artiklar på en:Wikipedia som [saknar SKBL mallen](https://petscan.wmflabs.org/?psid=17136250)\n",
     "  * idag finns 680 en:Wikipedia artiklar som i Wikidata har koppling SKBL se [Petscan fråga](https://petscan.wmflabs.org/?psid=17144813)\n",
     "    * video hur [petscan sparql fungerar](https://youtu.be/hOIOc3SKKW4) \n",
-    "    * en:Wikipedia sidor som sknar mall [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) [petscan 17154918](https://petscan.wmflabs.org/?psid=17154918)\n",
+    "    * en:Wikipedia sidor som saknar mall [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) [petscan 17154918](https://petscan.wmflabs.org/?psid=17154918)\n",
     "    \n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
