--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -34,7 +34,9 @@
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
     "    * avlidna svenska kvinnor med mest artiklar i Wikipedia [men ej finns hos SKBL](http://tinyurl.com/y6s2wvc2)\n",
     "    * senaste ändringar i [Wikidata för SKBL person](https://tinyurl.com/SKBLc) jmf. [Change Stream WD](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
-    "  * Test Kepler.gl\n",
+    "    \n",
+    "    ![](https://github.com/salgo60/FactGrid/blob/master/SKBL.png?raw=true)\n",
+    "  * Test [Kepler.gl](https://kepler.gl/) se bild ovan\n",
     "    * [Test sida](https://salgo60.github.io/SKBLWikidata/web/)\n",
     "    * Hur detta skapas se [Jupyter](https://github.com/salgo60/FactGrid/blob/master/SKBL%20-%3E%20Kepler.gl.ipynb) och [datafil](https://github.com/salgo60/SKBLWikidata/blob/master/web/SKBL.geojson) / [raw](https://raw.githubusercontent.com/salgo60/SKBLWikidata/master/web/SKBL.geojson)\n",
     "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp) \n",
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +420,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -452,9 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'keys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-c3799ac7ade8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mkeys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlistNewItems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SKBL_newfile.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mSKBLfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mdict_writer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSKBLfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteheader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlistNewItems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import csv  \n",
     "jsonURL = \"https://skbl.se/sv/artikel/\"\n",
