Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -29,7 +29,7 @@
     "      * verktyget Scholia som används för citation graphs men fungerar för riksdagspersoner ex. [scholia.toolforge.org Anna Lind](https://scholia.toolforge.org/author/Q208591)\n",
     "        * hennes [co-author graph](https://w.wiki/a7F) samma men visa [parti](https://w.wiki/a7N)  \n",
     "          * jmf [Karin Andersson](https://w.wiki/a7L)\n",
-    "    * målningar med CC-0 som finns i WIkicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
+    "    * målningar med CC-0 som finns i Wikicommon [skapade av SKBL person](https://t.co/8yxATKmoDJ) \n",
     "    * lista med källor från [Kyrkböcker Wikidata har för personer i SKBL](https://w.wiki/a58) \n",
     "    * lista hur [många språk SKBL personerna finns på i Wikipedia](https://tinyurl.com/yaqx9jl2) \n",
     "    * avlidna svenska kvinnor med mest artiklar i Wikipedia [men ej finns hos SKBL](http://tinyurl.com/y6s2wvc2)\n",
