--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.21\n",
+    "version 1.3.4.24\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -36,8 +36,8 @@
     "    * senaste ändringar i [Wikidata för SKBL person](https://tinyurl.com/SKBLc) jmf. [Change Stream WD](https://tools.wmflabs.org/wikidata-todo/rcvis.html)\n",
     "    \n",
     "    ![](https://github.com/salgo60/FactGrid/blob/master/SKBL.png?raw=true)\n",
-    "  * Test [Kepler.gl](https://kepler.gl/) se bild ovan\n",
-    "    * [Test sida](https://salgo60.github.io/SKBLWikidata/web/)\n",
+    "  * Test [Kepler.gl](https://kepler.gl/) se bild ovan, [video](https://youtu.be/kMAwWJpEolw)\n",
+    "    * [Test sida SKBL <-> Kepker.gl](https://salgo60.github.io/SKBLWikidata/web/)\n",
     "    * Hur detta skapas se [Jupyter](https://github.com/salgo60/FactGrid/blob/master/SKBL%20-%3E%20Kepler.gl.ipynb) och [datafil](https://github.com/salgo60/SKBLWikidata/blob/master/web/SKBL.geojson) / [raw](https://raw.githubusercontent.com/salgo60/SKBLWikidata/master/web/SKBL.geojson)\n",
     "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp) \n",
     "  * 1495 poster 7/04/2020\n",
@@ -69,13 +69,14 @@
     "  \n",
     "## Statistik\n",
     "* idag länkar sv:Wikipedia se [video](https://www.youtube.com/watch?v=qwVL0OOEdkY)\n",
-    "  * med mall SKBL --> [489 artiklar](https://sv.wikipedia.org/wiki/Kategori:SKBL) --> 2019 antal visningar > [1 700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
+    "  * med mall SKBL --> [547 artiklar](https://sv.wikipedia.org/wiki/Kategori:SKBL) --> 2019 antal visningar > [1 700 000](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:SKBL)\n",
     "  * med mall Auktioritetsdata --> [1379 artiklar](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_SKBL) --> 2019 antal visningar > [3,4 miljoner](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%25C3%25A5n_SKBL)\n",
     "  * vi borde kunna lyfta detta vidare och ha samma som för orter/församlingar/organisationer/skolor\n",
     "  \n",
     "### sv:Wikipedia     \n",
-    "* SKBL artiklar som [saknar motsvarande artikel på sv:Wikipedia](https://w.wiki/Zui) \n",
-    "* SKBL artiklar som [saknar Auktoritetsdatamallen](https://petscan.wmflabs.org/?psid=17145215)\n",
+    "* SKBL kopplade artiklar som [saknar motsvarande artikel på sv:Wikipedia](https://w.wiki/a9P) 70 stycken \n",
+    "* SKBL kopplade artiklar som [saknar Auktoritetsdatamallen](https://petscan.wmflabs.org/?psid=17145215)\n",
+    "* SKBL kopplade artiklar som [saknar SKBL](https://petscan.wmflabs.org/?psid=17145215)\n",
     "\n",
     "### en:Wikipedia    \n",
     "en:Wikipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
@@ -88,10 +89,10 @@
     "#### SKBL template  live  på en:Wikipedia\n",
     "Update its live se [video](https://youtu.be/a8Uty1etPdQ) \n",
     "* Mall SKBL finns nu på en:Wikipedia se [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) \n",
-    "  * används på sidorna -> [Category:SKBL_template_using_Wikidata_property_P4963](https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963) > 400\n",
+    "  * används på 680 sidorna -> [Category:SKBL_template_using_Wikidata_property_P4963](https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963) \n",
     "  * [visningsstatistik på dessa sidor](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963) > 4 milj hitills 2019, 2018 > [5,8 miljoner visningar](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=last-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:SKBL_template_using_Wikidata_property_P4963)\n",
     "* SKBL artiklar på en:Wikipedia som [saknar SKBL mallen](https://petscan.wmflabs.org/?psid=17136250)\n",
-    "  * idag finns 680 en:Wikipedia artiklar som i Wikidata har koppling SKBL se [Petscan fråga](https://petscan.wmflabs.org/?psid=17144813)\n",
+    "  * idag finns 680 en:Wikipedia artiklar som i Wikidata har koppling SKBL i Wikidata se [Petscan fråga](https://petscan.wmflabs.org/?psid=17144813)\n",
     "    * video hur [petscan sparql fungerar](https://youtu.be/hOIOc3SKKW4) \n",
     "    * en:Wikipedia sidor som saknar mall [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) [petscan 17154918](https://petscan.wmflabs.org/?psid=17154918)\n",
     "    \n",
