Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.25\n",
+    "version 1.3.4.27\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
     "  * Wikidata ung. 1200 kopplingar SKBL 7/04/2020\n",
     "    *  1450 WD <-> SKBL 20/08/2020\n",
-    "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/a7g) \n",
+    "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/aB5) \n",
     "        * sorterade efter [sitelinks](https://w.wiki/a7i)\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
@@ -48,7 +48,7 @@
     "  \n",
     "### TODO\n",
     "* bättre API fråga till SKBL behövs så alla returneras skickat fråga GITHUB [issue 22](https://github.com/spraakbanken/skbl-portal/issues/22) om hjälp\n",
-    "* prata ihop oss med SKBL hur vi kan enklare använda varandras data - får en känsla av att detta är ett projekt som snart avslutas dvs. för sent....\n",
+    "* prata ihop oss med SKBL hur vi kan enklare använda varandras data \n",
     "  * församlingar skrivs idag ut i text i JSON filen med koordinat vore tydligare om ni hade ett Qnummer med exempel\n",
     "    * Borrby församling visas idag med text och \n",
     "    place: { parish: \"Borrby församling\", pin: { lat: 55.456944, lon: 14.180278 }.....\n",
@@ -80,7 +80,7 @@
     "\n",
     "### en:Wikipedia    \n",
     "en:Wikipedia är en av världens 10 största siter så SKBLs engelska artiklar borde försöka länkas därifrån se [länk visningar](https://stats.wikimedia.org/v2/#/en.wikipedia.org)\n",
-    "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/ZxJ) = 680 stycken \n",
+    "* SKBL kopplade poster som [har en:Wikipedia artikel](https://w.wiki/aBC) = 680 stycken \n",
     "  * som [saknar en:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* ~~borde tas fram en [SKBL mall](https://sv.wikipedia.org/wiki/Mall:SKBL) på engelsk Wikipedia som pekar på SKBLs engelska artikel~~\n",
     "  * [Q98518115](https://www.wikidata.org/wiki/Q98518115)  \n",
@@ -103,6 +103,14 @@
     "  * som [saknar ru:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* Auktoritetsdata på ru:Wikipedia [Шаблон:Внешние ссылки](https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B8%D0%B5_%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8)\n",
     "\n",
+    "## Museums och Digitaltmuseum\n",
+    "En perfekt i en perfekt värld borde vara museums och lexikon som SKBL...  \n",
+    "* Vad som gjorts\n",
+    "  * Wikidata har egenskap SKBL [P4963](https://www.wikidata.org/wiki/Property_talk:P4963)  och Kulturnav [P1248](https://www.wikidata.org/wiki/Property_talk:P1248)  \n",
+    "  * finns P1248 kan en länk skapas till det material som kopplats till denna auktoritet med http://digitaltmuseum<P1248> detta görs nu i\n",
+    "    * :sv:Mall:Digitaltmuseum\n",
+    "    * :en:Templats:Digitaltmuseum\n",
+    "    \n",
     "## Chrome extension\n",
     "Den chrome extension som utvecklas där man kan stå på en sida hos SKBL och slå upp i Wikidata [Entity Explosion](https://chrome.google.com/webstore/detail/entity-explosion/bbcffeclligkmfiocanodamdjclgejcn) "
    ]
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +250,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1451 entries, 0 to 1450\n",
+      "RangeIndex: 1450 entries, 0 to 1449\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1451 non-null object\n",
+      "skblid    1450 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -301,9 +309,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1451 entries, 0 to 1450\n",
+      "RangeIndex: 1450 entries, 0 to 1449\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1451 non-null object\n",
+      "skblid    1450 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,19 +348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1388\n",
+       "both          1387\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       1\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -411,17 +419,21 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1450</th>\n",
+       "      <td>EsterNilsson</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "            skblid      _merge\n",
+       "1450  EsterNilsson  right_only"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
