Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -103,13 +103,23 @@
     "  * som [saknar ru:Wikipedia artikel](https://w.wiki/Zup)\n",
     "* Auktoritetsdata på ru:Wikipedia [Шаблон:Внешние ссылки](https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B8%D0%B5_%D1%81%D1%81%D1%8B%D0%BB%D0%BA%D0%B8)\n",
     "\n",
+    "## SKBL and linked data \n",
+    "* we have now started to think of redesign the usage of the WD property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963)\n",
+    "1) create WD object for an article --> we can connect authors to the obkect and create citation graohs etc. see Swedish politician Anna Lindh and how we have a lot of Swedish motions she has written [\n",
     "## Museums och Digitaltmuseum\n",
     "En perfekt i en perfekt värld borde vara museums och lexikon som SKBL...  \n",
     "* Vad som gjorts\n",
     "  * Wikidata har egenskap SKBL [P4963](https://www.wikidata.org/wiki/Property_talk:P4963)  och Kulturnav [P1248](https://www.wikidata.org/wiki/Property_talk:P1248)  \n",
     "  * finns P1248 kan en länk skapas till det material som kopplats till denna auktoritet med http://digitaltmuseum<P1248> detta görs nu i\n",
-    "    * :sv:Mall:Digitaltmuseum\n",
-    "    * :en:Templats:Digitaltmuseum\n",
+    "    * [:sv:Mall:Digitaltmuseum](https://sv.wikipedia.org/wiki/Mall:Digitaltmuseum) används av >  [260 artiklar](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_Digitaltmuseum)\n",
+    "    * [:en:Templats:Digitaltmuseum](https://en.wikipedia.org/wiki/Template:Digitaltmuseum) används av >  [40 artiklar](https://en.wikipedia.org/wiki/Category:Digitaltmuseum_template_using_Wikidata_property_P1248)\n",
+    "* Problemet är att Digitaltmuseum \n",
+    "    * är dåligt utvecklad har född, död och inte ens var personene är född som länkad data\n",
+    "    * har väldigt få egenskaper och saknar SPARQL federation som är ett enkelt sätt att koppla ihop\n",
+    "    * museerna verkar inte se någon vinst med länkade data utan metadata skickas som text till Europeana se [blogpost]()\n",
+    "    * se vidare \n",
+    "      * [Kan vi hitta ett sätt att göra Digitaltmuseum bättre](http://minancestry.blogspot.com/2020/08/digitaltmuseum-personer-associerade-med.html)\n",
+    "      * [video](https://www.youtube.com/watch?time_continue=1&v=OBaIdkwoXbU) hur Wikicommons identifioerar personer i bilder hämtade från Digitaltmuseum med länkad data \n",
     "    \n",
     "## Chrome extension\n",
     "Den chrome extension som utvecklas där man kan stå på en sida hos SKBL och slå upp i Wikidata [Entity Explosion](https://chrome.google.com/webstore/detail/entity-explosion/bbcffeclligkmfiocanodamdjclgejcn) "
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +260,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1450 entries, 0 to 1449\n",
+      "RangeIndex: 1451 entries, 0 to 1450\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1450 non-null object\n",
+      "skblid    1451 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -309,9 +319,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1450 entries, 0 to 1449\n",
+      "RangeIndex: 1451 entries, 0 to 1450\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1450 non-null object\n",
+      "skblid    1451 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -323,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,19 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1387\n",
+       "both          1388\n",
        "left_only       63\n",
-       "right_only       1\n",
+       "right_only       0\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -419,21 +429,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1450</th>\n",
-       "      <td>EsterNilsson</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            skblid      _merge\n",
-       "1450  EsterNilsson  right_only"
+       "Empty DataFrame\n",
+       "Columns: [skblid, _merge]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +483,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-c3799ac7ade8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mkeys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlistNewItems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SKBL_newfile.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mSKBLfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mdict_writer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSKBLfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteheader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlistNewItems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-47-c3799ac7ade8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mkeys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlistNewItems\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SKBL_newfile.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mSKBLfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mdict_writer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSKBLfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteheader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mdict_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlistNewItems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
      ]
     }
@@ -538,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
